--- a/main.css
+++ b/main.css
@@ -630,18 +630,29 @@ h2::after {
 }
 
 #mobilMenu{
+
   z-index: 999;
   margin: 0;
+  margin-top: 0.96em;
   width: 100%;
-  min-width: 100%;
   display: none;
+  background-color: rgb(235, 73, 73);
+
+  
+}
+
+.egeszMobil{
+  margin: 0;
+  padding: 0;
 }
 
 .menuItem{
+  display: flex;
+  flex-direction: row;
   width: 100%;
   height: 60px;
-  background-color: rgb(235, 73, 73);
-  border-bottom: #e0e0e0 1px solid;
+  border-bottom: #e0e0e0 1px solid;  
+
 
 }
 
@@ -651,16 +662,28 @@ h2::after {
 }
 
 .mobilMenuLinks, .MobilDropdown{
+  display: flex;
+  flex-direction: row;
+  height: 60px;
   width: 100%;
-  height: auto;
   text-decoration: none;
   text-transform: uppercase;
   color: white;
   font-size: 20px;
   font-weight: 600;
-  padding-right: 10%;
-
+  padding-left: 5%;
+  align-items: center;
+  box-sizing: border-box;
+  transition: 0.3s;
 }
+
+
+.mobilMenuLinks:hover, .MobilDropdown:hover{
+  background-color: white;
+  color: rgb(235, 73, 73);
+}
+
+
 
 .menuLink:hover{
   background-color: whiq;
