--- a/CSS/Blog.css
+++ b/CSS/Blog.css
@@ -2,6 +2,7 @@
     width: 80%;
     margin: 0 auto;
     display: flex;
+    margin-bottom: 5%;
 }
 
 .BalBlogDiv{
@@ -16,10 +17,54 @@
 
 .BalKepDivClass{
     width: 100%;
+    background-color: rgb(0, 5, 46);
+    color: white;
+    padding-bottom: 2.5%;
+}
+
+.BlogP{
+    margin-left: 2%;
+    margin-right: 2%;
+    font-weight: bold;
+    
 }
 
 .JobbKepDivClass{
     width: 100%;
+    background-color: rgb(0, 5, 46);
+    color: white;
+}
+
+.JobbKicsiNagyDiv{
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.JobbKicsiBal{
+    width: 60%;
+    margin-left: 4%;
+}
+
+.JobbKicsiJobb{
+    width: 40%;
+    float: right;
+}
+.JobbKicsiGomb{
+    margin-top: 14%;
+    height: 50%;
+    width: 80%;
+    font-weight: bold;
+    font-size: larger;
+    text-align: center;
+    color: white;
+    background-color: rgb(235, 73, 73);
+    border: 0px;
+    box-shadow: 10px 10px 19px 0px rgba(0,0,0,0.75);
+}
+
+.hidden{
+    color: rgb(0, 5, 46);
 }
 
 .BalKepClass{
@@ -47,9 +92,10 @@
 #BlogKeresesSelectID{
     width: 100%;
     height: 120%;
-    margin-top: 4.5%;
+    margin-top: 3.5%;
     border-color: rgba(131, 131, 131, 0.514);
     box-shadow: 9px 14px 34px -11px rgba(88, 88, 88, 0.55);
     color: gray;
     margin-left: 3%;
+    padding: 1%;
 }
