--- a/CSS/Blog.css
+++ b/CSS/Blog.css
@@ -20,6 +20,7 @@
     background-color: rgb(0, 5, 46);
     color: white;
     padding-bottom: 2.5%;
+    margin-bottom: 4%;
 }
 
 .BlogP{
@@ -27,6 +28,27 @@
     margin-right: 2%;
     font-weight: bold;
     
+}
+
+a{
+    text-decoration: none;
+}
+
+.BalBlogCimSpan{
+    background-color: rgb(0, 5, 46);
+    transform: translate(00px,-2%);
+    position: absolute;
+    color: white;
+    margin-left: 2%;
+    padding: 0.5% 3.5% 0.5% 1.50%;
+    font-weight: bold;
+    font-size: larger;
+    border-radius:  0px 0px 20px 20px;
+}
+
+.BalBlogDatumP{
+    font-weight: normal;
+    font-size: medium;
 }
 
 .JobbKepDivClass{
@@ -61,6 +83,12 @@
     background-color: rgb(235, 73, 73);
     border: 0px;
     box-shadow: 10px 10px 19px 0px rgba(0,0,0,0.75);
+}
+.JobbKicsiGomb:hover{
+    width: 90%;
+    height: 60%;
+    font-size: 140%;
+    margin-right: 5%;
 }
 
 .hidden{
