--- a/home.css
+++ b/home.css
@@ -1,173 +1,87 @@
-.line, .carousel li img, .carousel li, .carousel {
+
+:root{}
+:root{
+  --slider-width: 400px;
+  --slider-height: 300px;
+}
+
+* { box-sizing: border-box; }
+
+
+.slider {
+
+  top: 50%;
+  left: 50%;
+  width: (--slider-width);
+  height: (--slider-height);
+  box-shadow: 3px 3px 10px rgba(0,0,0,.2);
+}
+.slides img{
   width: 100%;
 }
-
-.flex, .carousel-wrapper, .center, .carousel ul {
+.slides {
   display: flex;
-}
-
-.center, .carousel ul {
-  align-items: center;
-  justify-content: center;
-}
-
-
-.carousel-wrapper input {
-  display: none;
-}
-
-.carousel {
-  overflow: hidden;
-}
-.carousel ul {
   position: relative;
-  list-style: none;
+  width: 6550px;
+}
+.wrapper {
   overflow: hidden;
-  margin: 0;
-  padding: 0;
-  height: 80%;
-  transition: left 0.8s cubic-bezier(0.77, 0, 0.175, 1);
+  position: relative;
+  width: slider-width;
+  height: slider-height;
 }
 
-.nav-dot {
-  position: absolute;
+
+.slides.shifting {
+  transition: left .2s ease-out;
+}
+
+.slide {
+  width: (--slider-width);
+  height: (--slider-height);
   cursor: pointer;
-  margin-left: -7.5px;
-  bottom: -22.5px;
-  width: 15px;
-  height: 15px;
-  opacity: 0.5;
-  background-color: white;
-  border-radius: 50%;
-  transition: 0.4s;
-}
-.nav-dot:hover {
-  opacity: 0.8;
-  transform: scale(1.2);
-}
-.nav-dot:active {
-  transform: scale(0.9);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: all 1s;
+  position: relative;
+  background: #FFCF47;
+  border-radius: 2px;
 }
 
-.nav-dot[for=slide1] {
-  left: 40%;
-}
 
-#slide1:checked ~ .carousel ul {
-  left: 0%;
-}
-#slide1:checked ~ .nav-dot[for=slide1] {
-  opacity: 1;
-}
-
-.nav-dot[for=slide2] {
-  left: 45%;
-}
-
-#slide2:checked ~ .carousel ul {
-  left: -100%;
-}
-#slide2:checked ~ .nav-dot[for=slide2] {
-  opacity: 1;
-}
-
-.nav-dot[for=slide3] {
-  left: 50%;
-}
-
-#slide3:checked ~ .carousel ul {
-  left: -200%;
-}
-#slide3:checked ~ .nav-dot[for=slide3] {
-  opacity: 1;
-}
-
-.nav-dot[for=slide4] {
-  left: 55%;
-}
-
-#slide4:checked ~ .carousel ul {
-  left: -300%;
-}
-#slide4:checked ~ .nav-dot[for=slide4] {
-  opacity: 1;
-}
-
-.nav-dot[for=slide5] {
-  left: 60%;
-}
-
-#slide5:checked ~ .carousel ul {
-  left: -400%;
-}
-#slide5:checked ~ .nav-dot[for=slide5] {
-  opacity: 1;
-}
-
-.right-arrow, .left-arrow {
-  display: none;
+.control {
   position: absolute;
-  cursor: pointer;
-  font-weight: bolder;
-  text-shadow: 0 0 7.5px rgba(0, 0, 0, 0.7);
   top: 50%;
-  z-index: 1;
-  opacity: 0.7;
-  margin-top: -25px;
+  width: 50px;
   height: 50px;
-  font-size: 50px;
-  transition: 0.2s;
-}
-.right-arrow:hover, .left-arrow:hover {
-  opacity: 1;
-  transform: scale(1.2);
-}
-.right-arrow:active, .left-arrow:active {
-  transform: scale(0.9);
+  background: #fff;
+  border-radius: 50px;
+  margin-right: 25px; 
+  margin-left: 25px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+  z-index: 2;
 }
 
-.left-arrow {
-  left: 15px;
+.prev,
+.next {
+  background-size: 22px;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
 
-.right-arrow {
-  right: 15px;
+.prev {
+  background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronLeft-512.png);
+  left: -20px;
 }
 
-#slide1:checked ~ .left-arrow[for=slide5], #slide1:checked ~ .right-arrow[for=slide2] {
-  display: block;
+.next {
+  background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png);
+  right: -20px;
 }
 
-#slide2:checked ~ .left-arrow[for=slide1], #slide2:checked ~ .right-arrow[for=slide3] {
-  display: block;
-}
-
-#slide3:checked ~ .left-arrow[for=slide2], #slide3:checked ~ .right-arrow[for=slide4] {
-  display: block;
-}
-
-#slide4:checked ~ .left-arrow[for=slide3], #slide4:checked ~ .right-arrow[for=slide5] {
-  display: block;
-}
-
-#slide5:checked ~ .left-arrow[for=slide4], #slide5:checked ~ .right-arrow[for=slide1] {
-  display: block;
-}
-
-.signature {
-  margin-top: 100px;
-  bottom: 0;
-  font-family: "Quicksand";
-  color: #9696aa;
-  text-shadow: 0 2.5px rgba(0, 0, 0, 0.25);
-}
-.signature .name {
-  color: white;
-}
-.signature .dot {
-  margin: 0 5px;
-}
-.signature a {
-  color: white;
-  text-decoration: underline;
+.prev:active,
+.next:active {
+  transform: scale(.8);
 }
