--- a/CSS/Coupons.css
+++ b/CSS/Coupons.css
@@ -1,16 +1,112 @@
-.couponPic{
-    width: 320px;
-    box-shadow: inset 5px black;
+.main{
+    display: flex;
+    flex-direction:column;
+    flex-wrap: wrap;
+
 }
 
-.couponmain{
+
+.couponPic{
+    width: 320px;
+    box-shadow: 0px 0px 5px black;
+}
+
+.couponMain{
+
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 80%;
-    background-color: rgb(252, 229, 229);
+    margin: 0 auto;
+    background-color: rgb(236, 229, 229);
+    box-shadow: 0px 0px 1em rgb(160, 160, 160);
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .couponLeiras{
+    margin-left: 2em;
     width: 66%;
+}
+
+h1{
+    font-weight: 500;
+    margin-left: 1em;
+    letter-spacing: 2px;
+}
+
+.couponMain button{
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    margin-right: 10%;
+    width: 300px;
+    height: 70px;
+    color: rgb(235, 73, 73);
+    border: navajowhite;
+    background-color: rgb(255, 255, 255);
+    border: rgb(235, 73, 73) 1px solid;
+    border-radius: 3px;
+    transition: 0.3s 
+}
+
+.couponMain button:hover{
+    background-color: rgb(235, 73, 73);
+    color: white;
+    font-size: 23px;
+    border-color: rgb(192, 0, 0);
+}
+
+.kep{
+    position: relative;
+}
+
+.kedvezmeny{
+    position: absolute;
+    top: 10%;
+    left: 3%;
+    z-index: 999;
+    font-size: 50px;
+    font-weight: 700;
+    color: rgba(255, 255, 255, 0.479);
+}
+
+
+@media only screen and (max-width: 1000px){
+    .couponMain{
+        flex-wrap: wrap;
+        justify-content: space-around;
+        
+    }
+
+    .couponMain button{
+        margin: 0 auto;
+        margin-bottom: 50px;
+    }
+
+    .couponLeiras, h1{
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+
+    .couponPic{
+        margin-bottom: 1em;
+        margin-right: 1em;
+    }
+}
+
+@media only screen and (max-width: 870px){
+
+    .couponMain{
+        flex-direction: column;
+        align-items: center;
+    }
+    .couponPic{
+        margin-right: 0;
+        width: 100%;
+    }
+    .couponMain button{
+        width: 90%;
+    }
 }
