--- a/CSS/Coupons.css
+++ b/CSS/Coupons.css
@@ -27,6 +27,7 @@
 .couponLeiras{
     margin-left: 2em;
     width: 66%;
+    text-align: justify; 
 }
 
 h1{
@@ -74,8 +75,7 @@ h1{
 
 @media only screen and (max-width: 1000px){
     .couponMain{
-        flex-wrap: wrap;
-        justify-content: space-around;
+        flex-wrap: wrap;     
         
     }
 
@@ -84,15 +84,20 @@ h1{
         margin-bottom: 50px;
     }
 
-    .couponLeiras, h1{
+    h1{
         margin: 0 auto;
         text-align: center;
         margin-bottom: 50px;
     }
 
     .couponPic{
-        margin-bottom: 1em;
         margin-right: 1em;
+    }
+
+    .couponLeiras{
+        margin: 0 auto;
+        margin-bottom: 1em;
+        text-align-last: center;
     }
 }
 
