--- a/CSS/Blog.css
+++ b/CSS/Blog.css
@@ -163,7 +163,7 @@ a{
         display: flex;
         margin-bottom: 5%;
         margin-top: 5%;
-        width: 80%;
+        width: 100%;
 
     }
 
@@ -178,7 +178,8 @@ a{
     }
 
     .BalRendezesHead{
-        width: 50%;
-        color: rgb(235, 73, 73);;
+        width: 35%;
+        color: rgb(235, 73, 73);
+        text-align: right;
     }
 }
