--- a/CSS/Coupons.css
+++ b/CSS/Coupons.css
@@ -41,8 +41,7 @@ h1{
     font-weight: 500;
     letter-spacing: 2px;
     margin-right: 10%;
-    width: 17%;
-    max-width: 17%;
+    width: max-content;
     height: 70px;
     color: rgb(235, 73, 73);
     border: navajowhite;
