--- a/home.css
+++ b/home.css
@@ -52,6 +52,7 @@
 }
 
 .control {
+  opacity: 30%;
   position: absolute;
   top: 50%;
   width: 50px;
@@ -88,13 +89,93 @@
   transform: scale(0.9);
 }
 #kep{
-  width: 25em;
-  height: 20em;
+  width: 30%;
+  height: 35%;
+
 }
 .container{
+  margin-top:5%;
+  margin-bottom: 5%;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  margin-inline: 5%;
+  margin-left: 1%;
+  margin-right: 1%;
 }
-.legyszi{
-  width: 100%;
+.slider-indicators {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 8px;
+}
+
+.slider-indicators span {
+  width: 12px;
+  height: 12px;
+  background-color: rgba(255, 255, 255, 0.8); 
+  border-radius: 50%; 
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.slider-indicators span.active {
+  background-color: #ff0000; 
+}
+.slider-banner {
+  position: absolute;
+  top: 15%;
+  left: 10%;
+  background-color: #0d0d2b; 
+  color: white;
+  padding: 20px;
+  width: 350px;
+  height: 480px;
+  text-align: center;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  font-family: 'Barlow', sans-serif;
+}
+
+.banner-title {
+  font-size:xx-large ;
+  font-weight: 400;
+}
+
+.banner-main {
+  font-size: 55px;
+  font-weight: 700;
+  margin: 5px 0;
+}
+
+.banner-discount {
+  font-size: 55px;
+  font-weight: 700;
+}
+
+.banner-sub {
+margin-left: 12%;
+margin-right: 12%;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.banner-btn {
+  background-color: #e10000;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: xx-large;
+  font-weight: 600;
+}
+
+.banner-btn:hover {
+  background-color: #ff4040;
+}
+.vonal{
+  margin-bottom:-15%;
+  margin-top: 5%;
 }
