--- a/CSS/Blog.css
+++ b/CSS/Blog.css
@@ -164,22 +164,30 @@ a{
         margin-bottom: 5%;
         margin-top: 5%;
         width: 100%;
-
     }
 
     #BalBlogKeresesSelectID{
         width: 50%;
+        height: 100%;
         border-color: rgba(131, 131, 131, 0.514);
         box-shadow: 9px 14px 34px -11px rgba(88, 88, 88, 0.55);
         color: gray;
         margin-left: 3%;
         padding: 1%;
+        margin-top: 4.5%;
         font-weight: 900;
+        font-size: 2vw;
     }
 
     .BalRendezesHead{
         width: 35%;
         color: rgb(235, 73, 73);
         text-align: right;
+        font-size: 4vw;
+    }
+
+    .BalBlogCimSpan{
+        width: 35%;
+        font-size: 5vw;
     }
 }
