--- a/home.css
+++ b/home.css
@@ -174,6 +174,13 @@ margin-right: 12%;
   flex-direction: row;
   justify-content: space-around;
   margin: 5%;
+  flex-wrap:wrap ;
+  
+}
+@media screen and (max-width: 600px) {
+  .container{
+    flex: 0 1 calc(33% - 1 em);
+  }
 }
 
 .image-box {
