--- a/home.css
+++ b/home.css
@@ -1,17 +1,17 @@
 :root {
-  --slider-width: 100%; 
-  --slider-height: 700px;
+  --slider-height: 80vh;  
 }
 
 * {
   box-sizing: border-box;
 }
-
+.felsoLec{
+  margin-bottom: 10px;
+}
 .slider {
   position: relative;
-  width: var(--slider-width);
+  width: 100%;
   height: var(--slider-height);
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, .2);
   overflow: hidden;
 }
 
@@ -22,8 +22,9 @@
 }
 
 .slides img {
-  width: 100%; 
-  height: auto; 
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .wrapper {
@@ -38,31 +39,25 @@
 }
 
 .slide {
-  flex-shrink: 0; 
-  width: 100%;  
-  height: var(--slider-height);
-  cursor: pointer;
+  flex-shrink: 0;
+  width: 100%;
+  height: var(--slider-height); 
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  transition: all 1s;
-  position: relative;
-  border-radius: 2px;
+  align-items: center;
 }
 
 .control {
   opacity: 30%;
   position: absolute;
   top: 50%;
-  width: 50px;
-  height: 50px;
+  width: 40px; 
+  height: 40px; 
   background: #fff;
-  border-radius: 50px;
-  margin-right: 25px;
-  margin-left: 25px;
+  border-radius: 50%;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
   z-index: 2;
-  transform: translateY(-50%); 
+  transform: translateY(-50%);
 }
 
 .prev,
@@ -75,12 +70,12 @@
 
 .prev {
   background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronLeft-512.png);
-  left: -20px;
+  left: 10px;
 }
 
 .next {
   background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png);
-  right: -20px;
+  right: 10px;;
 }
 
 .prev:active,
@@ -116,76 +111,69 @@
 }
 .slider-banner {
   position: absolute;
-  top: 15%;
-  left: 10%;
-  background-color: #0d0d2b; 
+  top: 10%;
+  left: 5%;
+  background-color: rgba(13, 13, 43, 0.8); 
   color: white;
   padding: 20px;
-  width: 350px;
-  height: 480px;
+  width: 90%; 
+  max-width: 350px; 
   text-align: center;
   border: 2px solid rgba(255, 255, 255, 0.2);
-  font-family: 'Barlow', sans-serif;
 }
 
 .banner-title {
-  font-size:xx-large ;
+  font-size: 1.5rem; 
   font-weight: 400;
 }
 
 .banner-main {
-  font-size: 55px;
+  font-size: 2.5rem; 
   font-weight: 700;
   margin: 5px 0;
 }
 
 .banner-discount {
-  font-size: 55px;
+  font-size: 2.5rem;
   font-weight: 700;
 }
 
 .banner-sub {
-margin-left: 12%;
-margin-right: 12%;
-  font-size: 15px;
+  font-size: 0.9rem; 
   font-weight: 300;
 }
 
 .banner-btn {
   background-color: #e10000;
   color: white;
-  padding: 8px 12px;
+  padding: 10px 20px;
   border: none;
   margin-top: 10px;
   cursor: pointer;
-  font-size: xx-large;
+  font-size: 1rem; 
   font-weight: 600;
 }
 
 .banner-btn:hover {
-  background-color: #ff4040;
+  background-color: #ff8989;
 }
 .vonal{
   margin-bottom:-5%;
   margin-top: 5%;
 }
+
 .container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   margin: 5%;
-  flex-wrap:wrap ;
-  
-}
-@media screen and (max-width: 600px) {
-  .container{
-    flex: 0 1 calc(33% - 1 em);
-  }
+  flex-wrap: wrap;
 }
 
 .image-box {
   position: relative;
-  width: 30%;
+  width: 30%; 
+  margin-bottom: 20px; 
 }
 
 .image-box img {
@@ -203,6 +191,20 @@ margin-right: 12%;
   color: rgb(255, 255, 255);
   padding: 20px;
   width: 80%;
+}
+
+
+@media screen and (max-width: 1024px) {
+  .image-box {
+    width: 45%; 
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .image-box {
+    width: 100%; 
+  }
 }
 
 .banner-title {
@@ -235,4 +237,73 @@ margin-right: 12%;
 .vonalharom{
   color: white;
   margin-bottom: 15%;
+}
+/* Tablet méretek */
+@media screen and (max-width: 1024px) {
+  :root {
+    --slider-height: 50vh; 
+  }
+
+  .slider-banner {
+    top: 5%;
+    left: 5%;
+    width: 80%;
+    padding: 15px;
+  }
+
+  .banner-title {
+    font-size: 1.2rem;
+  }
+
+  .banner-main {
+    font-size: 2rem;
+  }
+
+  .banner-discount {
+    font-size: 2rem;
+  }
+
+  .banner-sub {
+    font-size: 0.8rem;
+  }
+
+  .banner-btn {
+    font-size: 0.9rem;
+    padding: 8px 16px;
+  }
+}
+
+/* Telefon méretek */
+@media screen and (max-width: 600px) {
+  :root {
+    --slider-height: 40vh; 
+  }
+
+  .slider-banner {
+    top: 2%;
+    left: 2%;
+    width: 90%;
+    padding: 10px;
+  }
+
+  .banner-title {
+    font-size: 1rem;
+  }
+
+  .banner-main {
+    font-size: 1.5rem;
+  }
+
+  .banner-discount {
+    font-size: 1.5rem;
+  }
+
+  .banner-sub {
+    font-size: 0.7rem;
+  }
+
+  .banner-btn {
+    font-size: 0.8rem;
+    padding: 6px 12px;
+  }
 }
