--- a/home.css
+++ b/home.css
@@ -223,6 +223,12 @@
   border: solid 1px 1px;
   font-size: 16px;
   cursor: pointer;
+  animation: 0.2s;
+}
+
+.banner-btna:hover{
+  background-color: white;
+  color: black;
 }
 
 .vonalketto{
